@@ -15,7 +15,7 @@
 	<key>Droppable</key>
 	<true/>
 	<key>OutputType</key>
-	<string>Text Window</string>
+	<string>Progress Bar</string>
 	<key>StatusItemDisplayType</key>
 	<string>Text Window</string>
 	<key>StatusItemTitle</key>
